@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-Git-FilePermissions
 
 {{$NEXT}}
 
+  - Removed autodie in tests
   - Code cleanup - moved all 'use' before 'has'
 
 1.000  2018-04-02 22:38:46 UTC
